k8s/overlays/dev/patches/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-admin-route
spec:
  parentRefs:
  - name: internal-gateway
    namespace: gateway-internal
  hostnames:
  - "agentgateway-admin.dev.neuraltrust.ai"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-proxy-route
spec:
  parentRefs:
  - name: internal-gateway
    namespace: gateway-internal
  hostnames:
  - "agentgateway.dev.neuraltrust.ai"
  - "gateway-llm.dev.neuraltrust.ai"
  - "*.llm.dev.neuraltrust.ai"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-mcp-route
spec:
  parentRefs:
  - name: internal-gateway
    namespace: gateway-internal
  hostnames:
  - "agentgateway-mcp.dev.neuraltrust.ai"
  - "gateway-mcp.dev.neuraltrust.ai"
  - "*.mcp.dev.neuraltrust.ai"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-proxy-route-external
spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway
  hostnames:
  - "agentgateway.dev.neuraltrust.ai"
  - "gateway-llm.dev.neuraltrust.ai"
  - "*.llm.dev.neuraltrust.ai"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-mcp-route-external
spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway
  hostnames:
  - "agentgateway-mcp.dev.neuraltrust.ai"
  - "gateway-mcp.dev.neuraltrust.ai"
  - "*.mcp.dev.neuraltrust.ai"
